--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 // https://mvnrepository.com/artifact/com.h2database/h2
 	testImplementation 'com.h2database:h2:2.2.224'
+	// https://mvnrepository.com/artifact/com.google.code.gson/gson
+	implementation 'com.google.code.gson:gson:2.10.1'
+
 
 	//data faker
 	implementation 'net.datafaker:datafaker:2.0.2'
